--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,9 @@ dependencies {
 test {
     useTestNG()
 }
+
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
